TADS Files Settings
Add repository setting for the various
TADS3 file extensions, both source and
binary: `.t`, `.t3`, `.t3x`, `.t3v`.

--- a/.editorconfig
+++ b/.editorconfig
@@ -25,6 +25,16 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+## TADS Sources
+###############
+[*.t]
+charset = utf-8
+end_of_line = unset
+indent_size = unset
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+
 ## Shell Scripts
 ################
 [*.sh]
